fixing overflow issues

--- a/css/index.css
+++ b/css/index.css
@@ -263,6 +263,7 @@ body {
     grid-template-rows: repeat(2, 200px);
     column-gap: 30px;
     margin: 14px 40px 30px;
+    overflow: hidden;
 
 }
 
@@ -330,7 +331,9 @@ body {
     grid-area: 1 / 3 / 3 / 4;
     background-color: green;
     border-radius: 3px;
+
     background-image: url('https://i.pinimg.com/736x/d4/16/ac/d416ac062be6772119d84c8ba19a00fb.jpg');
+
 
 }
 
@@ -360,6 +363,7 @@ body {
 .wth {
     text-decoration: none;
     color: white;
+
 }
 
 .overlay {
@@ -378,7 +382,6 @@ body {
 .overlay p {
     margin: 10px 0 17px 5px;
     display: block;
-    overflow: hidden;
     width: 13.5vw;
     white-space: no-wrap;
     text-overflow: ellipsis;
@@ -394,6 +397,10 @@ body {
     margin-top: -180px;
     pointer-events: none;
 
+}
+
+img[alt="red death redemption"]{
+    width: 110% !important;
 }
 
 /*#endregion */
@@ -1208,9 +1215,9 @@ fieldset {
 }
 
 .recent-pfps {
-    margin: 35px 10px 0 28px;
-    width: 44.6px;
-    height: 100px;
+    margin: 39px 16px 0 30px;
+    width: 53.6px;
+    height: 106.2px;
     float: left;
     font-size: 38.6px;
 }
@@ -1241,6 +1248,10 @@ fieldset {
     
 }
 
+.ten {
+    margin-left: 0;
+    font-size: inherit;
+}
 /* #endregion */
 
 /* #region ------------ merch and contact----------------------------- */
